updated dependency and tests

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "free-dom",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A collection of small micro-libraries for interacting with the DOM",
   "main": "index.js",
   "jsnext:main": "index.js",
@@ -28,7 +28,7 @@
     "rollup": "^0.19.1"
   },
   "dependencies": {
-    "css-class-acts": "^1.0.0",
+    "class-acts": "^1.0.2",
     "dom-emit": "^1.0.1",
     "qsa": "^1.0.0"
   }
